--- a/style.css
+++ b/style.css
@@ -1069,9 +1069,40 @@ section #text span
 
 
 
+/*------------------faqs--------------*/
 
+#faq
+{
+    
+    background-image: linear-gradient(to bottom, rgb(0, 0, 0), rgb(0, 0, 0));
+    padding: 20 !important;
+    padding-bottom: 20px;
+}
 
-
+.faqquestion
+{
+    color: rgb(255, 255, 255);
+    font-size: 26px;
+    font-weight: 400;
+    margin-top: 0;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-family: 'Teko', sans-serif;
+    text-align: left;
+    padding-top: 5px;
+}
+.faqanswer
+{
+    color: rgb(255, 255, 255);
+    font-size: 15px;
+    font-weight: 400;
+    margin-top: 0;
+    margin-left: 30px;
+    margin-right: 30px;
+    font-family: 'Poppins', sans-serif;
+    text-align: left;
+    padding-top: 5px;
+}
 
 /*------------------Footer--------------*/
 
